--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,14 +1,12 @@
 version: 0.2
-
-env:
-  shell: bash
-  variables:
-    AWS_REGION: "ap-northeast-1"
-
 phases:
+  pre_build:
+    commands:
+      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
   build:
     commands:
-      - docker build -t c18f-intern-app -f docker/php-apache/Dockerfile .
+      - docker build -t $IMAGE_NAME -f docker/php-apache/Dockerfile .
   post_build:
     commands:
-      - docker push 280107060642.dkr.ecr.$AWS_REGION.amazonaws.com/c18f-intern-app
+      - docker tag $IMAGE_NAME:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_NAME
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_NAME
