--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,5 +8,14 @@ phases:
       - docker build -t $IMAGE_NAME -f docker/php-apache/Dockerfile .
   post_build:
     commands:
-      - docker tag $IMAGE_NAME:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_NAME
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_NAME
+      - export IMAGE_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_NAME:latest
+      - docker tag $IMAGE_NAME:latest $IMAGE_URI
+      - docker push $IMAGE_URI
+      - printf '{"ImageURI":"%s"}' $IMAGE_URI > imageDetail.json
+artifacts:
+  files:
+    - imageDetail.json
+    - taskdef.json
+    - appspec.yaml
+  name: c18f-intern-artifacts-$(date +%Y-%m-%d)
+  discard-paths: yes
